# personas-pipeline

./: .gitignore  .gitmodules  BENCHMARK_CANDIDATES.md  BENCHMARK_PLANS.md  LICENSE  MERGE_DECISIONS.md  PRD_TESTING.md  README.md
crawler/: .env.example  README.md  pyproject.toml
crawler/config/: crawl_jobs.json
crawler/crawler/: __init__.py  adapter.py  base.py  models.py  pipeline.py
crawler/crawler/connectors/: __init__.py  dense_fixture.py  ga4.py  hubspot.py  intercom.py
crawler/crawler/feature_crawler/: __init__.py  __main__.py  base.py  cli.py  models.py  pipeline.py  policy.py  records.py  sink.py
crawler/data/: linkedin_connections_live_2026-04-13.json  linkedin_visible_profile_details_2026-04-13.json
crawler/docs/feature_crawler/: BRONZE_CONTRACT.md  DECISIONS.md  DISCORD_AUTH.md  HANDOFF.md  KNOWLEDGE.md  MOCK_DATA.md  PRD_CRAWLER.md  QUICKSTART.md  RUNNING_DISCORD_CRAWL.md  SCHEDULING.md  TASKS.md  crawler-architecture.html  soundvista-month1-all-in-one 5.03.46 PM.html
crawler/scripts/feature_crawler/: cron_runner.py  discord_crawl_runner.py  generate_mock_conversations.py  generate_mock_network.py  install_cron.sh  linkedin_headless_visible_profiles.py  setup_automation.sh
crawler/tests/: test_adapter.py
crawler/tests/feature_crawler/: test_approved_web_connector.py  test_cli.py  test_discord_user_api.py  test_linkedin_auth.py  test_linkedin_connector.py  test_linkedin_headless_visible_profiles.py  test_linkedin_vendor.py  test_live_discord_connector.py  test_mock_conversations.py  test_pipeline.py  test_policy.py  test_reddit_connector.py  test_sink.py  test_threaded_web_connector.py
eval_framework/: .gitignore  README.md  pyproject.toml
eval_framework/.agents/: cold-outreach.md  icps.md  positioning.md  product-marketing-context.md
eval_framework/.github/workflows/: eval.yml
eval_framework/docs/: eval_suggestions.md
eval_framework/docs/plans/: 2026-04-07-persona-eval-dimensions.md  2026-04-08-persona-eval-implementation-plan.md  2026-04-08-persona-eval-plan.md  2026-04-09-research-informed-scorers.md  2026-04-09-tail-insight-detection-design.md  2026-04-09-tail-insight-detection-scorer.md  2026-04-11-bias-dimensions-d45-d46-d47.md  2026-04-12-persona-schema-bridge.md  2026-04-18-rubric-llm-judges.md
eval_framework/marketing/: leads.csv
eval_framework/persona_eval/: README.md  __init__.py  alerting.py  cli.py  conversation.py  db.py  llm_client.py  monitoring.py  registry.py  schemas.py  scorer.py  stats.py  storage.py  suite_runner.py
eval_framework/persona_eval/docs/: persona-eval-report.html  scorer-audit.html
eval_framework/persona_eval/scorers/: all.py
eval_framework/research/analysis/: 00_compiled_research.md  01_generative_agents.md  02_character_bench.md  03_persona_eval.md  04_dialogue_agents_zhang.md  05_simulate_humans_aher.md  06_economic_choice_labs.md  07_das_man.md  08_survey_simulation.md  09_promise_with_catch.md  10_automatic_persona_gen.md  11_business_products.md  12_entertainment_safety.md  13_practitioner_critique.md  analysis_claim1_deep_boundary_framework.md  analysis_claim1_ux_replacement.md  analysis_claim2_finetuning.md  analysis_claim3_individual_simulation.md  analysis_research_roadmap_to_replacement.md
eval_framework/research/brainlift/: AI_Personas_Brainlift.md  perplexity_brainlift_aipersona.md
eval_framework/research/corpus/: ai_persona_research_compilation.md
eval_framework/research/sources/: codex_research_2.md  codex_sources.md
eval_framework/tests/: conftest.py  golden_dataset.py  test_alerting.py  test_cli.py  test_conversation.py  test_embeddings.py  test_integration.py  test_llm_client.py  test_monitoring.py  test_registry.py  test_schemas.py  test_stats.py  test_storage.py  test_suite_runner.py
eval_framework/tests/fixtures/: persona_set.py  tail_insights.py
evaluation/: README.md  dashboard.html  pyproject.toml
evaluation/baselines/: field_interdependence.json  p1_baseline.json  p1_temp_winner.json  reference_vs_free_judging.json  rubric_ablation.json  temp_sweep.json
evaluation/evaluation/: __init__.py  golden_set.py  judges.py  metrics.py  registry.py
evaluation/evaluation/evals/: ai_detector.py  persona_viz.py
evaluation/tests/: conftest.py  golden_dataset.py  test_compare_versions.py  test_embeddings.py  test_integration.py  test_judges.py  test_llm_client.py  test_metrics.py  test_registry.py  test_schemas.py  test_suite_runner.py
orchestration/: README.md  pyproject.toml
orchestration/orchestration/: __init__.py  dag.py
segmentation/: README.md  pyproject.toml
segmentation/segmentation/: pipeline.py
synthesis/: .env  .env.example  README.md  pyproject.toml
synthesis/synthesis/: config.py  provider_registry.py
synthesis/tests/: test_capability_models.py  test_digest.py  test_persona_v2_foundation.py  test_relational_models.py  test_synthesizer_v2.py
twin/: README.md  pyproject.toml
twin/twin/: __init__.py  chat.py  conversations.py  harness.py  humanize.py  memory.py  state.py
(+1638 files in other folders)
