[project]
name = "persona-crawler"
version = "0.1.0"
description = "Connector framework for pulling behavioral signals into the personas pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
linkedin = [
    "browser-cookie3>=0.20",
    "playwright>=1.52",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
